Implement database connection

--- a/api/.env.development
+++ b/api/.env.development
@@ -1,2 +1,2 @@
 TODOAPP_MODE=development
-TODOAPP_DATABASE_URL=postgresql://postgres:postgres@postgres:5432/todoapp
+TODOAPP_DATABASE_URL=postgresql://postgres:postgres@postgres:5432/todoapp?sslmode=disable
