--- a/api/.env.test
+++ b/api/.env.test
@@ -1,2 +1,2 @@
 TODOAPP_MODE=test
-TODOAPP_DATABASE_URL=postgresql://postgres:postgres@postgres-test:5432/todoapp
+TODOAPP_DATABASE_URL=postgresql://postgres:postgres@postgres-test:5432/todoapp?sslmode=disable
