Add sessions endpoint

--- a/api/.env.development
+++ b/api/.env.development
@@ -1,2 +1,3 @@
+TODOAPP_AUTH_SECRET=secret_development
 TODOAPP_MODE=development
 TODOAPP_DATABASE_URL=postgresql://postgres:postgres@postgres:5432/todoapp?sslmode=disable
