--- a/api/.env.test
+++ b/api/.env.test
@@ -1,2 +1,3 @@
+TODOAPP_AUTH_SECRET=secret_test
 TODOAPP_MODE=test
 TODOAPP_DATABASE_URL=postgresql://postgres:postgres@postgres-test:5432/todoapp?sslmode=disable
